--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,62 @@ body {
         left: 100vw;
     }
 }
+
+/* foundations css */
+#foundations-section{
+    height: fit-content;
+    width: 100vw;
+    flex-flow: wrap column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    background: rgb(230, 230, 230);
+
+}
+#foundations-section h1{
+    padding: 10vh 0px 10vh 0px;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+
+.foundations{
+    width:100vw;
+    height: fit-content;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.community{
+    width: 18%;
+    height: 400px;
+    display: flex;
+    flex-flow: nowrap column;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border-radius: 7px;
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.3));
+    margin-bottom: 60px;
+}
+
+.foundations-icon{
+    display: flex;
+    height: 70px;
+    margin-top:20px;
+    margin-bottom: 25px;
+}
+
+.foundations-title {
+        display: flex;
+    margin-bottom: 15px;
+}
+
+.foundations-text {
+        display: flex;
+    width: 70%;
+    margin-bottom: 20px;
+}
