--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,73 @@ body {
     width: 70%;
     margin-bottom: 20px;
 }
+
+/* explore css  */
+
+#explore{
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    flex-flow: wrap column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(128, 128, 128, 0.4), rgba(128, 128, 128, 0.4)), 
+                url(images/parallax-4.jpg) 0%;
+    
+}
+
+#explore h1 { 
+    font-weight: bolder;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.explore-img{
+    width:60vw;
+    height: 70%;
+    background: url(images/video-3.jpg) 0%;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: wrap column;
+    justify-content: center;
+    align-items: center;
+}
+#explore-btn-container{
+    background: rgba(255, 255, 255, 0.3);
+    padding: 10px;
+    border-radius: 50%;
+    width: fit-content;
+
+}
+.explore-btn{
+    color: var(--blue-btn-background);
+    background: white;
+    padding: 20px 25px;
+    border-radius: 50%;
+    width: fit-content;
+    font-weight: 900;
+}
+
+@keyframes explore-btn-effect {
+    to{
+        color: white;
+        background: var(--blue-btn-background);
+    }
+    
+}
+
+@keyframes bg-effect {
+    50%{
+        background: rgba(255, 255, 255, 0.6);
+        padding: 100%;
+        border-radius: 50%;
+        width: fit-content;
+    }
+    100%{
+        background: rgba(255, 255, 255, 0);
+        padding: 0px;
+        border-radius: 50%;
+        width: fit-content;
+    }
+    
+}
