--- a/styles.css
+++ b/styles.css
@@ -271,20 +271,16 @@ body {
     flex-flow: wrap column;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 #join-bdd-section h1{
     font-size: 35px;
     font-weight: bolder;
-    color: black;
     margin: 10vh 0px;
 }
 
 .join-details{
-    /* display: flex;
-    flex-flow: wrap row;
-    justify-content: center;
-    align-items: center;    */
     display: grid;
     grid-template-columns: 30vw 70vw;
     grid-template-rows: 1fr;
@@ -334,7 +330,7 @@ body {
 .join-info-div li {
     list-style: none;
     margin: 10px 40px;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .join-info-div li span{
@@ -348,3 +344,23 @@ body {
     margin: 40px 0px 30px 5px;
 }
 
+.download-app-div {
+    display: flex;
+    flex-flow: wrap column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width:100%;
+    padding-right: 20px;
+
+}
+
+.download-app-div h4{
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: bolder;
+    padding-right: 20px;
+}
+
+.download-app-imgs{
+    cursor: pointer;
+    transform: scale(0.4);
+}
