--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,13 @@ body {
 .header-links li{
     font-size: 13px;
     margin: 50px 40px 0px 0px ;
+    text-decoration: none;
+    color: white;
+}
+
+.header-links li a{
+    text-decoration: none;
+    color: white;
 }
 
 .header-links li:nth-child(7) {
@@ -122,7 +129,6 @@ body {
     opacity: 0;;
 }
 
-
 @media only screen and (max-width: 1000px) {
     .landing-page header{
         background: black;
@@ -149,15 +155,12 @@ body {
         justify-self: flex-start;
         align-self: flex-start;
         margin-top: 30px;
-        
-        
     }
 
 .nav-btn{
     display: flex;
     opacity: 1;
 }
-
 }
 
 @keyframes collapse-nav-btn {
@@ -183,6 +186,45 @@ body {
     to {
         left: 100vw;
     }
+}
+
+.dropbtn {
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 /* foundations css */
@@ -668,3 +710,5 @@ footer{
 .footer-row-2 img {
     width: 20px;
 }
+
+
