--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-/* reset */
-
+/* RESET */
 *{
     margin:0;
     padding: 0;
 }
 
-/* utilities */
+/* UTILITIES */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html{
@@ -55,7 +54,7 @@ body {
     cursor: pointer;
 }
 
-/*  */
+/* LANDING PAGE */
 
 #landing-page{
     height: 100vh;
@@ -71,7 +70,6 @@ body {
     display: flex;
     flex-flow: wrap row;
     justify-content: space-between;
-
 } 
 
 #landing-page header img{
@@ -227,7 +225,7 @@ body {
     display: block;
 }
 
-/* foundations css */
+/* FOUNDATION CSS */
 #foundations-section{
     height: fit-content;
     width: 100vw;
@@ -244,7 +242,6 @@ body {
     font-weight: bolder;
 }
 
-
 .foundations{
     width:100vw;
     height: fit-content;
@@ -252,10 +249,9 @@ body {
     flex-flow: wrap row;
     justify-content: space-around;
     align-items: center;
-
 }
 
-.community{
+.foundation-div{
     width: 18%;
     height: 400px;
     display: flex;
@@ -286,7 +282,7 @@ body {
     margin-bottom: 20px;
 }
 
-/* explore css  */
+/* EXPLORE CSS  */
 
 #explore{
     width: 100vw;
@@ -296,8 +292,7 @@ body {
     justify-content: center;
     align-items: center;
     background: linear-gradient(rgba(128, 128, 128, 0.4), rgba(128, 128, 128, 0.4)), 
-                url(images/parallax-4.jpg) 0%;
-    
+                url(images/parallax-4.jpg) 0%;   
 }
 
 #explore h1 { 
@@ -333,7 +328,7 @@ body {
     font-weight: 900;
 }
 
-/* join bdd css */
+/* jOIN-BDD CSS */
 
 #join-bdd-section{
     display: flex;
@@ -388,7 +383,6 @@ body {
         margin-top: -20px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     }
-    
 }
 
 .join-info-div h4{
@@ -420,7 +414,6 @@ body {
     align-items: flex-end;
     width:100%;
     padding-right: 20px;
-
 }
 
 .download-app-div h4{
@@ -434,7 +427,7 @@ body {
     transform: scale(0.4);
 }
 
-/* preferred css */
+/* PREFERRED CSS */
 
 #preferrd{
     width: 100vw;
@@ -488,7 +481,7 @@ body {
     font-weight: bolder;
 }
 
-/* academy css */
+/* ACADEMY CSS */
 
 #academy{
     width: 100vw;
@@ -570,7 +563,7 @@ body {
     margin-right: 30px;
 }
 
-/* footer css */
+/* FOOTER */
 
 footer{
     background: rgb(35, 35, 35);
@@ -593,7 +586,6 @@ footer{
 
 }
 .footer-sub-titles{
-    /* background: yellow; */
     width: 100%;
 }
 
@@ -704,11 +696,8 @@ footer{
     text-decoration: none;
     color: var(--blue-btn-background);
     font-size: 30px;
-
 }
 
 .footer-row-2 img {
     width: 20px;
 }
-
-
