--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
     width: fit-content;
     height: fit-content;
     border-radius: 20px;
+    border: none;
     text-decoration: none;
     color: white;
     cursor: pointer;
@@ -111,7 +112,6 @@ body {
     justify-self: center;
     align-self: center;
     margin-top: 20vh;
-
 }
 
 .nav-btn{
@@ -233,7 +233,7 @@ body {
     justify-content: center;
     align-items: center;
     color: black;
-    background: rgb(230, 230, 230);
+    background: rgb(240, 240, 240);
 
 }
 #foundations-section h1{
@@ -248,20 +248,34 @@ body {
     display: flex;
     flex-flow: wrap row;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .foundation-div{
     width: 18%;
-    height: 400px;
+    height: 520px;
     display: flex;
     flex-flow: nowrap column;
     justify-content: flex-start;
     align-items: center;
     background: white;
     border-radius: 7px;
-    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.1));
     margin-bottom: 60px;
+}
+
+.foundation-div:nth-child(1):hover,
+.foundation-div:nth-child(2):hover,
+.foundation-div:nth-child(3):hover{
+    background: #e1f4ff;
+}
+
+.foundation-div:nth-child(4):hover{
+    background: rgb(255, 255, 215);
+}
+
+.foundation-div:nth-child(5):hover {
+    background: rgb(255, 230, 230);
 }
 
 .foundations-icon{
@@ -279,7 +293,9 @@ body {
 .foundations-text {
     display: flex;
     width: 70%;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    opacity: 0.8;
+    line-height: 25px;
 }
 
 /* EXPLORE CSS  */
@@ -479,6 +495,100 @@ body {
     font-size: 15px;
     opacity: 0.8;
     font-weight: bolder;
+}
+
+
+/* TRENDING CSS */
+
+#trending-section{
+    height:fit-content;
+    width:100vw;
+    padding: 50px 0px;
+    color: black;
+    background: rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-flow: wrap column;
+    justify-content: center;
+    align-items: center;
+}
+
+#trending-section h1{
+    font-size: 35px;
+    font-weight: bolder;
+    margin-bottom: 40px;
+}
+
+.trending-container{
+    height: fit-content;
+    width:85vw;
+    display: flex;
+    flex-flow: nowrap row;
+    justify-content: center;
+    align-items: flex-start;
+    height: fit-content;
+} 
+
+.trending-slide-show{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.trending-div{
+    border-radius: 5px;
+    background: white;
+    width:30%;
+    height:fit-content;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.trending-div img{
+    width: 100%;
+    height: 250px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.trending-div h3 {
+    padding: 20px 25px;
+    height: 60px;
+    font-weight: bolder ;
+}
+
+.trending-div h3:hover {
+    color: var(--blue-btn-background);
+}
+
+.trending-div hr {
+    opacity: 0.5;
+}
+
+.trending-div h5 {
+    padding: 20px 20px;
+    font-weight: light;
+    opacity: 0.6;
+}
+
+.trending-container button{
+    margin-top: 20%;
+    padding: 15px;
+    color: white;
+    border: none;
+    cursor: pointer;
+    background: var(--blue-btn-background);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.trending-container button:nth-child(1){
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+#trending-section a{
+    margin: 60px 0px 20px 0px ;
 }
 
 /* ACADEMY CSS */
