--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     color: white;
     font-family: 'Roboto', sans-serif;
 }
+
 .scroll-btn{
     background: rgb(230, 230, 230);
     color: var(--blue-btn-background);
@@ -41,6 +42,7 @@ body {
 
 :root {
     --blue-btn-background:#0078be;
+    --section-width : 100vw;
 }
 
 .blue-btn{
@@ -59,7 +61,7 @@ body {
 
 #landing-page{
     height: 100vh;
-    width: 100vw;
+    width: var(--section-width);
     background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(images/slide1.jpg);
     display: flex;
     flex-flow: wrap column;
@@ -120,45 +122,43 @@ body {
     border-top: 2px solid white;
     border-bottom: 2px solid white;
     position: fixed;
-    top:40px;
-    right:60px;
-    z-index: 3;
+    top:50px;
+    left:90vw;
+    opacity: 0;
     display: 'none';
-    opacity: 0;;
 }
 
-@media only screen and (max-width: 1000px) {
-    .landing-page header{
+@media only screen and (max-width: 1100px) {
+    #landing-page header{
         background: black;
     } 
 
     .header-links{
-        display: flex;
-        flex-flow: wrap column;
-        justify-content: flex-start;
-        align-content: flex-start;
+        display: none;
         background: black;
         z-index: 1;
-        width: 100vw;
+        width: var(--section-width);
         height: 95vh;
-        padding-left: 80px;
         position: fixed;
-        left:100vw;
-        top: 120px;
+        left:var(--section-width);
+        top: 118px;
         
     }
-    .header-links li{
-        display: flex;
-        flex-flow: wrap column;
-        justify-self: flex-start;
-        align-self: flex-start;
-        margin-top: 30px;
-    }
 
-.nav-btn{
-    display: flex;
-    opacity: 1;
-}
+    .header-links li{
+        margin-top: 30px;
+        margin-left: 80px;
+    }  
+    
+    .header-links li:nth-child(7){
+        margin-top: 30px;
+        margin-left: 80px;
+    }      
+
+    .nav-btn{
+        display: flex;
+        opacity: 1;
+    }
 }
 
 @keyframes collapse-nav-btn {
@@ -181,8 +181,11 @@ body {
 }
 
 @keyframes hide-nav {
-    to {
-        left: 100vw;
+    99% {
+        left: var(--section-width);
+    }
+    100%{
+        left: var(--section-width);
     }
 }
 
@@ -228,14 +231,14 @@ body {
 /* FOUNDATION CSS */
 #foundations-section{
     height: fit-content;
-    width: 100vw;
+    width: var(--section-width);
     flex-flow: wrap column;
     justify-content: center;
     align-items: center;
     color: black;
     background: rgb(240, 240, 240);
-
 }
+
 #foundations-section h1{
     padding: 10vh 0px 10vh 0px;
     font-size: 30px;
@@ -243,7 +246,7 @@ body {
 }
 
 .foundations{
-    width:100vw;
+    width:100%;
     height: fit-content;
     display: flex;
     flex-flow: wrap row;
@@ -253,7 +256,7 @@ body {
 
 .foundation-div{
     width: 18%;
-    height: 520px;
+    height: fit-content;
     display: flex;
     flex-flow: nowrap column;
     justify-content: flex-start;
@@ -293,15 +296,15 @@ body {
 .foundations-text {
     display: flex;
     width: 70%;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
     opacity: 0.8;
-    line-height: 25px;
+    line-height: 20px;
 }
 
 /* EXPLORE CSS  */
 
 #explore{
-    width: 100vw;
+    width: var(--section-width);
     height: 90vh;
     display: flex;
     flex-flow: wrap column;
@@ -352,6 +355,7 @@ body {
     justify-content: center;
     align-items: center;
     color: black;
+    width:var(--section-width);
 }
 
 #join-bdd-section h1{
@@ -446,7 +450,7 @@ body {
 /* PREFERRED CSS */
 
 #preferrd{
-    width: 100vw;
+    width: var(--section-width);
     height: fit-content;
     display: flex;
     flex-flow: wrap column;
@@ -474,7 +478,7 @@ body {
 }
 
 .preferred-div:nth-child(1) h1{
-    color: rgb(0, 195, 255);
+    color: rgb(0, 192, 128);
 }
 
 .preferred-div:nth-child(2) h1 {
@@ -501,8 +505,7 @@ body {
 /* TRENDING CSS */
 
 #trending-section{
-    height:fit-content;
-    width:100vw;
+    width:var(--section-width);
     padding: 50px 0px;
     color: black;
     background: rgba(0, 0, 0, 0.05);
@@ -520,7 +523,7 @@ body {
 
 .trending-container{
     height: fit-content;
-    width:85vw;
+    width:85%;
     display: flex;
     flex-flow: nowrap row;
     justify-content: center;
@@ -594,7 +597,7 @@ body {
 /* ACADEMY CSS */
 
 #academy{
-    width: 100vw;
+    width: var(--section-width);
     height: fit-content;
     display: flex;
     flex-flow: wrap row;
@@ -640,8 +643,10 @@ body {
     font-weight: lighter;
     margin: 30px 0px 0px 90px;
 }
+/* TESTIMONIALS SECTION */
 
 #testimonials{
+    width: var(--section-width);
     color:black;
     display: flex;
     flex-flow: wrap row;
@@ -676,6 +681,7 @@ body {
 /* FOOTER */
 
 footer{
+    width: var(--section-width);
     background: rgb(35, 35, 35);
     display: flex;
     flex-flow: wrap column;
@@ -816,4 +822,40 @@ footer{
 
 .footer-row-2 img {
     width: 20px;
+}
+
+/* Fixing Responsivness*/
+
+@media only screen and (max-width: 830px) {
+    :root {
+        --section-width: 105vw;
+    }
+
+    .foundation-div {
+        width: fit-content;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    :root {
+        --section-width: 115vw;
+    }
+}
+
+@media only screen and (max-width: 560px) {
+    :root {
+        --section-width: 120vw;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    :root {
+        --section-width: 125vw;
+    }
+}
+
+@media only screen and (max-width: 460px) {
+    :root {
+        --section-width: 130vw;
+    }
 }
