--- a/styles.css
+++ b/styles.css
@@ -390,7 +390,7 @@ body {
 .join-info{
     display: flex;
     flex-flow: wrap row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: flex-start; 
 }
 
@@ -403,7 +403,7 @@ body {
     background: rgba(0, 0, 0, 0.02);
     padding: 10px 10px;
     border-radius: 5px;
-    width: 150px;
+    max-width: 150px;
     height: fit-content;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
@@ -420,7 +420,7 @@ body {
 }
 
 .join-info-div h4{
-    width:100px;
+    max-width:100px;
     margin: 40px 0px 20px 0px ;
 }
 
@@ -441,6 +441,23 @@ body {
     margin: 40px 0px 30px 5px;
 }
 
+@media only screen and (max-width: 1000px) {
+    .join-info-div {
+        max-width: 50%;
+    }
+    .join-info-div h4 {
+        max-width: fit-content;
+    }
+}
+
+@media only screen and (max-width: 580px) {
+    .join-info-div {
+        max-width: 100%;
+        background: transparent;
+        box-shadow: none;
+    }
+} 
+
 .download-app-div {
     display: flex;
     flex-flow: wrap column;
@@ -448,23 +465,31 @@ body {
     align-items: flex-end;
     width:100%;
     padding-right: 20px;
+    margin-top: 30px;
 }
 
 .download-app-div h4{
     color: rgba(0, 0, 0, 0.5);
     font-weight: bolder;
     padding-right: 20px;
+    max-width: 50%;
+    display: flex;
+    justify-self:center;
+    align-self: center;
 }
 
 .download-app-imgs{
     cursor: pointer;
     transform: scale(0.4);
+    display: flex;
+    justify-content: center;
+    align-self: center ;
 }
 
 /* PREFERRED CSS */
 
 #preferrd{
-    width: var(--section-width);
+    width: 100%;
     height: fit-content;
     display: flex;
     flex-flow: wrap column;
@@ -702,7 +727,7 @@ body {
 /* FOOTER */
 
 footer{
-    width: var(--section-width);
+    width: 100%;
     background: rgb(35, 35, 35);
     display: flex;
     flex-flow: wrap column;
